--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- test -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Hochzeits Chauffeur</title>
     <style>
         body {
