--- a/index.html
+++ b/index.html
@@ -7,17 +7,22 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header class="header">
+        <div class="overlay-text">
+            <h1>23 Rent-it</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="gallery.html">Galerie</a></li>
+                    <li><a href="prices.html">Preise</a></li>
+                    <li><a href="calendar.html">Kalender</a></li>
+                    <li><a href="contact.html">Kontakt</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <header>
-        <h1>23 Rent-it</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="gallery.html">Galerie</a></li>
-                <li><a href="prices.html">Preise</a></li>
-                <li><a href="calendar.html">Kalender</a></li>
-                <li><a href="contact.html">Kontakt</a></li>
-            </ul>
-        </nav>
+        
     </header>
 
     <main>
