--- a/contact.html
+++ b/contact.html
@@ -22,19 +22,22 @@
         </div>
     </header>
 
-    <main>
-        <section id="contact" class="centered">
+    <main id="contact">
+        <div class="centered">
             <h2>Kontakt</h2>
-            <form>
-                <label for="name">Name:</label>
+            <form action="send_email.php" method="post">
+                <label for="name">Name</label>
                 <input type="text" id="name" name="name" required>
-                <label for="email">Email:</label>
+
+                <label for="email">E-Mail</label>
                 <input type="email" id="email" name="email" required>
-                <label for="message">Nachricht:</label>
-                <textarea id="message" name="message" required></textarea>
+
+                <label for="message">Nachricht</label>
+                <textarea id="message" name="message" rows="4" required></textarea>
+
                 <button type="submit">Senden</button>
             </form>
-        </section>
+        </div>
     </main>
 
     <footer>
