--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>23 Rent-it - Kontakt</title>
+    <title>23 Drve. - Kontakt</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="header">
         <div class="overlay-text">
-            <h1>23 Rent-it</h1>
+            <h1>23 Drve.</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -41,7 +41,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 23 Rent-it</p>
+        <p>&copy; 2024 23 Drve.</p>
     </footer>
 </body>
 </html>
