--- a/calendar.html
+++ b/calendar.html
@@ -21,14 +21,16 @@
             </nav>
         </div>
     </header>
-
+    
     <main>
-        <section id="calendar">
-            <h2>Kalender</h2>
-            <div id="calendar-widget">
-                <!-- Hier könnte ein eingebetteter Kalender von Google Calendar oder eine andere Kalenderlösung eingefügt werden -->
+        <h2>Verfügbarkeit & Kalender</h2>
+        <div class="tile-container">
+            <div style="background-image: url('assets/pictures/kalender.jpeg');" class="tile large"></div>
+            <div style="background-image: url('assets/pictures/termine.jpeg');" class="tile"></div>
+            <div class="overlay-text">
+                <p>Planen Sie Ihr Event mit uns. Werfen Sie einen Blick auf unseren Kalender und reservieren Sie rechtzeitig Ihren Wunschtermin.</p>
             </div>
-        </section>
+        </div>
     </main>
 
     <footer>
