--- a/prices.html
+++ b/prices.html
@@ -21,17 +21,16 @@
             </nav>
         </div>
     </header>
-
+    
     <main>
-        <section id="prices">
-            <h2>Preise</h2>
-            <ul>
-                <li>Kirche zur Location: 500€</li>
-                <li>Anfahrt von 0-40km: 20€</li>
-                <li>Anfahrt von 40-70km: 50€</li>
-                <li>Längere Anfahrten auf Anfrage</li>
-            </ul>
-        </section>
+        <h2>Unsere Preise</h2>
+        <div class="tile-container">
+            <div style="background-image: url('assets/pictures/mustang_hochzeit.jpeg');" class="tile large"></div>
+            <div style="background-image: url('assets/pictures/innenraum.jpeg');" class="tile"></div>
+            <div class="overlay-text">
+                <p>Erleben Sie eine unvergessliche Fahrt in unserem Ford Mustang von 1965. Kontaktieren Sie uns für individuelle Angebote und Preise.</p>
+            </div>
+        </div>
     </main>
 
     <footer>
