--- a/prices.html
+++ b/prices.html
@@ -21,6 +21,22 @@
             </nav>
         </div>
     </header>
+
+    <div>
+        <div class="tile-container">
+            <div style="background-image: url('assets/pictures/konni\ drivn.jpeg');" class="tile large"></div>
+            <div style="background-image: url('assets/pictures/innenraum\ fern.jpeg');" class="tile rectangular"></div>
+            <div style="background-image: url('assets/pictures/me\ drivn.jpeg');" class="tile"></div>
+            <div style="background-image: url('assets/pictures/mustang\ herbst\ vorne.jpeg');background-position:center 37%" class="tile large"></div>
+            <div style="background-image: url('assets/pictures/mustang\ panno.jpeg');" class="tile"></div>
+            <div style="background-image: url('assets/pictures/innenraum\ nah.jpeg');" class="tile"></div>
+            <div class="overlay-text">
+                <h2>Was wir tun</h2>
+                <p>Wir bieten einen exklusiven Chauffeur-Dienst mit einem Ford Mustang von 1965 an. Perfekt für Hochzeiten, um das Brautpaar stilvoll von der Kirche zur Location zu fahren.</p>
+            </div>
+        </div>
+    </div>
+
     
     <main>
         <h2>Unsere Preise</h2>
