--- a/prices.html
+++ b/prices.html
@@ -31,23 +31,10 @@
             <div style="background-image: url('assets/pictures/mustang\ panno.jpeg');" class="tile"></div>
             <div style="background-image: url('assets/pictures/innenraum\ nah.jpeg');" class="tile"></div>
             <div class="overlay-text">
-                <h2>Was wir tun</h2>
-                <p>Wir bieten einen exklusiven Chauffeur-Dienst mit einem Ford Mustang von 1965 an. Perfekt für Hochzeiten, um das Brautpaar stilvoll von der Kirche zur Location zu fahren.</p>
-            </div>
+                <h2>Erleben Sie eine unvergessliche Fahrt in unserem Ford Mustang von 1965. Kontaktieren Sie uns für individuelle Angebote und Preise</h2>
         </div>
     </div>
 
-    
-    <main>
-        <h2>Unsere Preise</h2>
-        <div class="tile-container">
-            <div style="background-image: url('assets/pictures/mustang_hochzeit.jpeg');" class="tile large"></div>
-            <div style="background-image: url('assets/pictures/innenraum.jpeg');" class="tile"></div>
-            <div class="overlay-text">
-                <p>Erleben Sie eine unvergessliche Fahrt in unserem Ford Mustang von 1965. Kontaktieren Sie uns für individuelle Angebote und Preise.</p>
-            </div>
-        </div>
-    </main>
 
     <footer>
         <p>&copy; 2024 DRVE.</p>
