--- a/calendar.html
+++ b/calendar.html
@@ -22,6 +22,21 @@
         </div>
     </header>
     
+    <div>
+        <div class="tile-container">
+            <div style="background-image: url('assets/pictures/konni\ drivn.jpeg');" class="tile large"></div>
+            <div style="background-image: url('assets/pictures/innenraum\ fern.jpeg');" class="tile rectangular"></div>
+            <div style="background-image: url('assets/pictures/me\ drivn.jpeg');" class="tile"></div>
+            <div style="background-image: url('assets/pictures/mustang\ herbst\ vorne.jpeg');background-position:center 37%" class="tile large"></div>
+            <div style="background-image: url('assets/pictures/mustang\ panno.jpeg');" class="tile"></div>
+            <div style="background-image: url('assets/pictures/innenraum\ nah.jpeg');" class="tile"></div>
+            <div class="overlay-text">
+                <h2>Terminplaner</h2>
+                <p>Die auslastung und Planung können Sie hier einsehen, somit sehen Sie direkt wann wir noch Termine frei haben.</p>
+            </div>
+        </div>
+    </div>
+
     <main>
         <h2>Verfügbarkeit & Kalender</h2>
         <div class="tile-container">
