--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,7 @@
     </div>
 
 
+    <div id="contact-form-overlay">
         <div id="contact" class="centered">
             <form action="#" method="post">
                 <label for="name">Name</label>
@@ -50,7 +51,7 @@
                 <button type="submit">Senden</button>
             </form>
         </div>
-    </main>
+    </div>
 
     <footer>
         <p>&copy; 2024 DRVE.</p>
