--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,7 @@
             <div style="background-image: url('assets/pictures/innenraum\ nah.jpeg');" class="tile"></div>
             <div class="overlay-text">
                 <p>Wir freuen uns darauf, von Ihnen zu hören. Füllen Sie das Kontaktformular aus oder rufen Sie uns direkt an.</p>
+            </div>
         </div>
     </div>
 
