--- a/prices.html
+++ b/prices.html
@@ -31,7 +31,7 @@
             <div style="background-image: url('assets/pictures/mustang\ panno.jpeg');" class="tile"></div>
             <div style="background-image: url('assets/pictures/innenraum\ nah.jpeg');" class="tile"></div>
             <div class="overlay-text">
-                <p>Erleben Sie eine unvergessliche Fahrt in unserem Ford Mustang von 1965. Kontaktieren Sie uns für individuelle Angebote und Preise</p>
+                <h2>Erleben Sie eine unvergessliche Fahrt in unserem Ford Mustang von 1965. Kontaktieren Sie uns für individuelle Angebote und Preise</h2>
             </div>
          </div>
     </div>
