--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
         </div>
     </div>
 
-
+    <!-- Anpassung hier -->
     <div id="contact-form-overlay">
         <div id="contact" class="centered">
             <form action="#" method="post">
