--- a/prices.html
+++ b/prices.html
@@ -22,6 +22,17 @@
         </div>
     </header>
 
+    <div>
+        <div class="tile-container">
+            <div style="background-image: url('assets/pictures/konni\ drivn.jpeg');" class="tile large"></div>
+            <div style="background-image: url('assets/pictures/innenraum\ fern.jpeg');" class="tile rectangular"></div>
+            <div style="background-image: url('assets/pictures/me\ drivn.jpeg');" class="tile"></div>
+            <div style="background-image: url('assets/pictures/mustang\ herbst\ vorne.jpeg');background-position:center 37%" class="tile large"></div>
+            <div style="background-image: url('assets/pictures/mustang\ panno.jpeg');" class="tile"></div>
+            <div style="background-image: url('assets/pictures/innenraum\ nah.jpeg');" class="tile"></div>
+        </div>
+    </div>
+
     <main>
         <div class="package-container">
             <div class="package-tile" data-package="Paket 1">
