--- a/prices.html
+++ b/prices.html
@@ -30,6 +30,7 @@
             <div style="background-image: url('assets/pictures/mustang\ herbst\ vorne.jpeg');background-position:center 37%" class="tile large"></div>
             <div style="background-image: url('assets/pictures/mustang\ panno.jpeg');" class="tile"></div>
             <div style="background-image: url('assets/pictures/innenraum\ nah.jpeg');" class="tile"></div>
+            <div class="overlay-text">
         </div>
     </div>
 
