--- a/prices.html
+++ b/prices.html
@@ -38,47 +38,47 @@
         <div class="package-container">
             <div class="package-tile" data-package="Paket 1">
                 <div class="package-content">
-                    <h2>Paket 1</h2>
-                    <p>Beschreibung des Pakets 1...</p>
+                    <h2>Fotoshooting für Ihr Event</h2>
+                    <p>Erleben Sie ein einzigartiges Fotoshooting mit einem echten Klassiker: Unser 1965er Mustang! Ob Hochzeit, Geburtstag oder ein besonderer Anlass – dieses ikonische Fahrzeug wird Ihre Fotos unvergesslich machen. Perfekt als stilvolle Kulisse, die jeden Moment aufwertet. Sichern Sie sich jetzt diesen Hingucker für Ihr nächstes Event!</p>
                 </div>
                 <div class="package-price">
-                    <p>€ 100</p>
+                    <p>€ 150</p>
                 </div>
             </div>
             <div class="package-tile" data-package="Paket 2">
                 <div class="package-content">
-                    <h2>Paket 2</h2>
-                    <p>Beschreibung des Pakets 2...</p>
+                    <h2>Chauffeur-Service für Ihr Event</h2>
+                    <p>Genießen Sie Ihr Event stilvoll mit unserem Chauffeur-Service im 1965er Mustang! Lassen Sie sich in diesem legendären Fahrzeug zu Ihrer Hochzeit, Ihrem Geburtstag oder einem besonderen Anlass chauffieren. Ankommen mit Klasse – für unvergessliche Momente auf höchstem Niveau. Buchen Sie jetzt und erleben Sie zeitlose Eleganz auf vier Rädern!</p>
                 </div>
                 <div class="package-price">
-                    <p>€ 200</p>
+                    <p>€ 290</p>
                 </div>
             </div>
             <div class="package-tile" data-package="Paket 3">
                 <div class="package-content">
-                    <h2>Paket 3</h2>
-                    <p>Beschreibung des Pakets 3...</p>
+                    <h2>Kombinieren Sie das Beste aus beiden Welten</h2>
+                    <p>Unser 1965er Mustang als stilvolle Kulisse und exklusiver Chauffeur-Service in einem Paket! Perfekt für Hochzeiten, Geburtstage oder besondere Anlässe – sorgen Sie für einen unvergesslichen Auftritt und einmalige Erinnerungen. Erleben Sie zeitlose Eleganz, stilvoll in Szene gesetzt. Jetzt buchen und Ihr Event in ein Highlight verwandeln!</p>
                 </div>
                 <div class="package-price">
-                    <p>€ 300</p>
+                    <p>€ 490</p>
                 </div>
             </div>
             <div class="package-tile" data-package="Paket 4">
                 <div class="package-content">
-                    <h2>Paket 4</h2>
-                    <p>Beschreibung des Pakets 4...</p>
+                    <h2>Peaky Blinders Paket</h2>
+                    <p>Tauchen Sie ein in die Welt der 70er-Jahre-Gangster mit unserem exklusiven Peaky Blinders Paket! Ergänzen Sie Ihr Event mit authentischen Accessoires im Peaky Blinders American Gangster Style und unserem 1965er Mustang als perfekte Kulisse. Verleihen Sie Ihren Fotos und Ihrem Auftritt eine unwiderstehliche Mischung aus Charme und Understatement. Buchen Sie jetzt und machen Sie Ihr Event zu einem unvergesslichen Erlebnis im Stil der legendären 70er!</p>
                 </div>
                 <div class="package-price">
-                    <p>€ 400</p>
+                    <p>€ 580</p>
                 </div>
             </div>
             <div class="package-tile" data-package="Paket 5">
                 <div class="package-content">
-                    <h2>Paket 5</h2>
-                    <p>Beschreibung des Pakets 5...</p>
+                    <h2>Der Sekt-Empfang</h2>
+                    <p>Feiern Sie Ihren besonderen Anlass mit einem stilvollen Sekt-Empfang! Ergänzen Sie Ihr Event mit dieser eleganten Zusatzoption und begrüßen Sie Ihre Gäste standesgemäß. Perfekt in Kombination mit unserem 1965er Mustang, um den Start Ihres Events gebührend zu zelebrieren. Prost auf unvergessliche Momente!</p>
                 </div>
                 <div class="package-price">
-                    <p>€ 500</p>
+                    <p>€ 150</p>
                 </div>
             </div>
         </div>
