--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
             <div style="background-image: url('assets/pictures/mustang\ panno.jpeg');" class="tile"></div>
             <div style="background-image: url('assets/pictures/innenraum\ nah.jpeg');" class="tile"></div>
             <div class="overlay-text">
-                <h2>Was wir tun</h2>
-                <p>Wir bieten einen exklusiven Chauffeur-Dienst mit einem Ford Mustang von 1965 an. Perfekt für Hochzeiten, um das Brautpaar stilvoll von der Kirche zur Location zu fahren.</p>
+                <div class="custom-box">
+                    <h2>Was wir tun</h2>
+                    <p>Wir bieten einen exklusiven Chauffeur-Dienst mit einem Ford Mustang von 1965 an. Perfekt für Hochzeiten, um das Brautpaar stilvoll von der Kirche zur Location zu fahren.</p>
+                </div>
             </div>
         </div>
     </div>
