--- a/index.html
+++ b/index.html
@@ -32,8 +32,14 @@
             <div style="background-image: url('assets/pictures/innenraum\ nah.jpeg');" class="tile"></div>
             <div class="overlay-text">
                 <div class="custom-box">
-                    <h2>Was wir tun</h2>
-                    <p>Wir bieten einen exklusiven Chauffeur-Dienst mit einem Ford Mustang von 1965 an. Perfekt für Hochzeiten, um das Brautpaar stilvoll von der Kirche zur Location zu fahren.</p>
+                    <h2>Herzlich willkommen bei DRVE.! </h2>
+                    <p>Als junger und ambitionierter Unternehmer habe ich es mir zur Aufgabe gemacht, Ihre besonderen Momente stilvoll in Szene zu setzen. Mein Name ist [Ihr Name], und ich stehe für Leidenschaft, Präzision und ein Auge für das Besondere. Mit meinem einzigartigen Angebot – einem originalen 1965er Mustang – möchte ich Ihr Event zu einem unvergesslichen Erlebnis machen.
+
+                        Ob als eindrucksvolle Kulisse für Ihre Fotos, stilvolles Chauffeur-Erlebnis oder als Teil eines exklusiven Themenpakets im Peaky Blinders American Gangster Style der 70er Jahre – bei mir finden Sie das passende Highlight für Ihre Hochzeit, Ihren Geburtstag oder jedes andere besondere Event. 
+                        
+                        Ich biete nicht nur klassische Eleganz und authentische Atmosphäre, sondern sorge auch dafür, dass Ihr Event genau das gewisse Etwas bekommt, das es unvergesslich macht. Mit Liebe zum Detail und einem Gespür für Ihre Wünsche verwandele ich Ihre Feier in ein stilvolles Erlebnis.
+                        
+                        Entdecken Sie mein Angebot und lassen Sie uns gemeinsam unvergessliche Momente schaffen. Ich freue mich darauf, Sie auf Ihrer Reise zu begleiten und Ihr Event mit dem Charme vergangener Zeiten zu bereichern.</p>
                 </div>
             </div>
         </div>
