--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="overlay-text">
                 <div class="custom-box">
                     <h2>Herzlich willkommen bei DRVE.! </h2>
-                    <p>Als junger und ambitionierter Unternehmer habe ich es mir zur Aufgabe gemacht, Ihre besonderen Momente stilvoll in Szene zu setzen. Mein Name ist [Ihr Name], und ich stehe für Leidenschaft, Präzision und ein Auge für das Besondere. Mit meinem einzigartigen Angebot – einem originalen 1965er Mustang – möchte ich Ihr Event zu einem unvergesslichen Erlebnis machen.
+                    <p>Als junger und ambitionierter Unternehmer habe ich es mir zur Aufgabe gemacht, Ihre besonderen Momente stilvoll in Szene zu setzen. Mein Name ist Christian Szommer, und ich stehe für Leidenschaft, Präzision und ein Auge für das Besondere. Mit meinem einzigartigen Angebot – einem originalen 1965er Mustang – möchte ich Ihr Event zu einem unvergesslichen Erlebnis machen.
 
                         Ob als eindrucksvolle Kulisse für Ihre Fotos, stilvolles Chauffeur-Erlebnis oder als Teil eines exklusiven Themenpakets im Peaky Blinders American Gangster Style der 70er Jahre – bei mir finden Sie das passende Highlight für Ihre Hochzeit, Ihren Geburtstag oder jedes andere besondere Event. 
                         
