--- a/calendar.html
+++ b/calendar.html
@@ -30,6 +30,7 @@
             <div style="background-image: url('assets/pictures/mustang\ herbst\ vorne.jpeg');background-position:center 37%" class="tile large"></div>
             <div style="background-image: url('assets/pictures/mustang\ panno.jpeg');" class="tile"></div>
             <div style="background-image: url('assets/pictures/innenraum\ nah.jpeg');" class="tile"></div>
+            <div style="background-image: url('assets/pictures/konni\ drivn.jpeg');" class="tile large"></div>
             <div class="overlay-text">
                 <h2>Terminplaner</h2>
                 <p>Planen Sie Ihr Event mit uns. Werfen Sie einen Blick auf unseren Kalender und reservieren Sie rechtzeitig Ihren Wunschtermin.</p>
