--- a/gallery.html
+++ b/gallery.html
@@ -22,17 +22,20 @@
         </div>
     </header>
 
-    <main>
-        <section id="gallery">
-            <h2>Galerie</h2>
-            <div class="gallery-grid">
-                <img src="demo1.jpg" alt="Mustang 1">
-                <img src="demo2.jpg" alt="Mustang 2">
-                <img src="demo3.jpg" alt="Hochzeit 1">
-                <img src="demo4.jpg" alt="Hochzeit 2">
+    <div>
+        <div class="tile-container">
+            <div style="background-image: url('assets/pictures/konni\ drivn.jpeg');" class="tile large"></div>
+            <div style="background-image: url('assets/pictures/innenraum\ fern.jpeg');" class="tile rectangular"></div>
+            <div style="background-image: url('assets/pictures/me\ drivn.jpeg');" class="tile"></div>
+            <div style="background-image: url('assets/pictures/mustang\ herbst\ vorne.jpeg');background-position:center 37%" class="tile large"></div>
+            <div style="background-image: url('assets/pictures/mustang\ panno.jpeg');" class="tile"></div>
+            <div style="background-image: url('assets/pictures/innenraum\ nah.jpeg');" class="tile"></div>
+            <div style="background-image: url('assets/pictures/konni\ drivn.jpeg');" class="tile large"></div>
+            <div style="background-image: url('assets/pictures/innenraum\ fern.jpeg');" class="tile rectangular"></div>
             </div>
-        </section>
-    </main>
+        </div>
+    </div>
+
 
     <footer>
         <p>&copy; 2024 DRVE.</p>
