--- a/prices.html
+++ b/prices.html
@@ -24,15 +24,14 @@
 
     <div>
         <div class="tile-container">
-            <div style="background-image: url('assets/pictures/konni\ drivn.jpeg');" class="tile large"></div>
-            <div style="background-image: url('assets/pictures/innenraum\ fern.jpeg');" class="tile rectangular"></div>
-            <div style="background-image: url('assets/pictures/me\ drivn.jpeg');" class="tile"></div>
-            <div style="background-image: url('assets/pictures/mustang\ herbst\ vorne.jpeg');background-position:center 37%" class="tile large"></div>
-            <div style="background-image: url('assets/pictures/mustang\ panno.jpeg');" class="tile"></div>
-            <div style="background-image: url('assets/pictures/innenraum\ nah.jpeg');" class="tile"></div>
-            <div style="background-image: url('assets/pictures/konni\ drivn.jpeg');" class="tile large"></div>
-            <div style="background-image: url('assets/pictures/innenraum\ fern.jpeg');" class="tile rectangular"></div>
-            <div class="overlay-text">
+            <div style="background-image: url('assets/pictures/konni drivn.jpeg');" class="tile large"></div>
+            <div style="background-image: url('assets/pictures/innenraum fern.jpeg');" class="tile rectangular"></div>
+            <div style="background-image: url('assets/pictures/me drivn.jpeg');" class="tile"></div>
+            <div style="background-image: url('assets/pictures/mustang herbst vorne.jpeg');background-position:center 37%" class="tile large"></div>
+            <div style="background-image: url('assets/pictures/mustang panno.jpeg');" class="tile"></div>
+            <div style="background-image: url('assets/pictures/innenraum nah.jpeg');" class="tile"></div>
+            <div style="background-image: url('assets/pictures/konni drivn.jpeg');" class="tile large"></div>
+            <div style="background-image: url('assets/pictures/innenraum fern.jpeg');" class="tile rectangular"></div>
         </div>
     </div>
 
@@ -42,35 +41,35 @@
                 <div class="package-content">
                     <h2>Fotoshooting für Ihr Event</h2>
                     <p>Erleben Sie ein einzigartiges Fotoshooting mit einem echten Klassiker: Unser 1965er Mustang! Ob Hochzeit, Geburtstag oder ein besonderer Anlass – dieses ikonische Fahrzeug wird Ihre Fotos unvergesslich machen. Perfekt als stilvolle Kulisse, die jeden Moment aufwertet. Sichern Sie sich jetzt diesen Hingucker für Ihr nächstes Event!</p>
-                <div class="package-price">150<span class="euro">€</span></div>
+                    <div class="package-price">150<span class="euro">€</span></div>
                 </div>
             </div>
             <div class="package-tile" data-package="Paket 2">
                 <div class="package-content">
                     <h2>Chauffeur-Service für Ihr Event</h2>
                     <p>Genießen Sie Ihr Event stilvoll mit unserem Chauffeur-Service im 1965er Mustang! Lassen Sie sich in diesem legendären Fahrzeug zu Ihrer Hochzeit, Ihrem Geburtstag oder einem besonderen Anlass chauffieren. Ankommen mit Klasse – für unvergessliche Momente auf höchstem Niveau. Buchen Sie jetzt und erleben Sie zeitlose Eleganz auf vier Rädern!</p>
-                <div class="package-price">290<span class="euro">€</span></div>
+                    <div class="package-price">290<span class="euro">€</span></div>
                 </div>
             </div>
             <div class="package-tile" data-package="Paket 3">
                 <div class="package-content">
                     <h2>Kombinieren Sie das Beste aus beiden Welten</h2>
                     <p>Unser 1965er Mustang als stilvolle Kulisse und exklusiver Chauffeur-Service in einem Paket! Perfekt für Hochzeiten, Geburtstage oder besondere Anlässe – sorgen Sie für einen unvergesslichen Auftritt und einmalige Erinnerungen. Erleben Sie zeitlose Eleganz, stilvoll in Szene gesetzt. Jetzt buchen und Ihr Event in ein Highlight verwandeln!</p>
-                <div class="package-price">490<span class="euro">€</span></div>
+                    <div class="package-price">490<span class="euro">€</span></div>
                 </div>
             </div>
             <div class="package-tile" data-package="Paket 4">
                 <div class="package-content">
                     <h2>Peaky Blinders Paket</h2>
                     <p>Tauchen Sie ein in die Welt der 70er-Jahre-Gangster mit unserem exklusiven Peaky Blinders Paket! Ergänzen Sie Ihr Event mit authentischen Accessoires im Peaky Blinders American Gangster Style und unserem 1965er Mustang als perfekte Kulisse. Verleihen Sie Ihren Fotos und Ihrem Auftritt eine unwiderstehliche Mischung aus Charme und Understatement. Buchen Sie jetzt und machen Sie Ihr Event zu einem unvergesslichen Erlebnis im Stil der legendären 70er!</p>
-                <div class="package-price">580<span class="euro">€</span></div>
+                    <div class="package-price">580<span class="euro">€</span></div>
                 </div>
             </div>
             <div class="package-tile" data-package="Paket 5">
                 <div class="package-content">
                     <h2>Der Sekt-Empfang</h2>
                     <p>Feiern Sie Ihren besonderen Anlass mit einem stilvollen Sekt-Empfang! Ergänzen Sie Ihr Event mit dieser eleganten Zusatzoption und begrüßen Sie Ihre Gäste standesgemäß. Perfekt in Kombination mit unserem 1965er Mustang, um den Start Ihres Events gebührend zu zelebrieren. Prost auf unvergessliche Momente!</p>
-                <div class="package-price">150<span class="euro">€</span></div>
+                    <div class="package-price">150<span class="euro">€</span></div>
                 </div>
             </div>
         </div>
