--- a/contact.html
+++ b/contact.html
@@ -24,14 +24,14 @@
     
     <div>
         <div class="tile-container">
-            <div style="background-image: url('assets/pictures/konni\ drivn.jpeg');" class="tile large"></div>
-            <div style="background-image: url('assets/pictures/innenraum\ fern.jpeg');" class="tile rectangular"></div>
-            <div style="background-image: url('assets/pictures/me\ drivn.jpeg');" class="tile"></div>
-            <div style="background-image: url('assets/pictures/mustang\ herbst\ vorne.jpeg');background-position:center 37%" class="tile large"></div>
-            <div style="background-image: url('assets/pictures/mustang\ panno.jpeg');" class="tile"></div>
-            <div style="background-image: url('assets/pictures/innenraum\ nah.jpeg');" class="tile"></div>
-            <div style="background-image: url('assets/pictures/konni\ drivn.jpeg');" class="tile large"></div>
-            <div style="background-image: url('assets/pictures/innenraum\ fern.jpeg');" class="tile rectangular"></div>
+            <div style="background-image: url('assets/pictures/konni drivn.jpeg');" class="tile large"></div>
+            <div style="background-image: url('assets/pictures/innenraum fern.jpeg');" class="tile rectangular"></div>
+            <div style="background-image: url('assets/pictures/me drivn.jpeg');" class="tile"></div>
+            <div style="background-image: url('assets/pictures/mustang herbst vorne.jpeg');background-position:center 37%" class="tile large"></div>
+            <div style="background-image: url('assets/pictures/mustang panno.jpeg');" class="tile"></div>
+            <div style="background-image: url('assets/pictures/innenraum nah.jpeg');" class="tile"></div>
+            <div style="background-image: url('assets/pictures/konni drivn.jpeg');" class="tile large"></div>
+            <div style="background-image: url('assets/pictures/innenraum fern.jpeg');" class="tile rectangular"></div>
             <div class="overlay-text">
                 <h3>Wir freuen uns darauf, von Ihnen zu hören. Füllen Sie das Kontaktformular aus oder rufen Sie uns direkt an.</h3>
             </div>
