--- a/gallery.html
+++ b/gallery.html
@@ -39,15 +39,15 @@
                 <button class="gallery-nav prev">&lt;</button>
                 <div class="gallery-slider">
                     <img src="assets/pictures/mustang herbst vorne.jpeg" alt="Bild 1">
-                    <img src="assets/pictures/mustang herbst vorne.jpeg" alt="Bild 2">
+                    <img src="assets/pictures/konni drivn.jpeg" alt="Bild 2">
                     <img src="assets/pictures/mustang herbst vorne.jpeg" alt="Bild 3">
-                    <img src="assets/pictures/mustang herbst vorne.jpeg" alt="Bild 4">
+                    <img src="assets/pictures/konni drivn.jpeg" alt="Bild 4">
                     <img src="assets/pictures/mustang herbst vorne.jpeg" alt="Bild 5">
-                    <img src="assets/pictures/mustang herbst vorne.jpeg" alt="Bild 6">
+                    <img src="assets/pictures/konni drivn.jpeg" alt="Bild 6">
                     <img src="assets/pictures/mustang herbst vorne.jpeg" alt="Bild 7">
-                    <img src="assets/pictures/mustang herbst vorne.jpeg" alt="Bild 8">
+                    <img src="assets/pictures/konni drivn.jpeg" alt="Bild 8">
                     <img src="assets/pictures/mustang herbst vorne.jpeg" alt="Bild 9">
-                    <img src="assets/pictures/mustang herbst vorne.jpeg" alt="Bild 10">
+                    <img src="assets/pictures/konni drivn.jpeg" alt="Bild 10">
                     <!-- Weitere Bilder hier -->
                 </div>
                 <button class="gallery-nav next">&gt;</button>
