--- a/prices.html
+++ b/prices.html
@@ -32,6 +32,7 @@
             <div style="background-image: url('assets/pictures/innenraum nah.jpeg');" class="tile"></div>
             <div style="background-image: url('assets/pictures/konni drivn.jpeg');" class="tile large"></div>
             <div style="background-image: url('assets/pictures/innenraum fern.jpeg');" class="tile rectangular"></div>
+            <div class="overlay-text"></div>
         </div>
     </div>
 
